# uav_firmware

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  README.md  build.sh  pico_sdk_import.cmake
legacy/arduino_prototyping/8CH_PPM/src/: main-NicsLaptop.cpp
scripts/: monitor_PPM.py
src/: CMakeLists.txt  hello_there.c  hello_there.h  main.c
src/arduino_legacy/: 8CH_PPM.ino
src/arduino_prototyping/: 8CH_PPM.ino
src/arduino_prototyping/src/: SerialClass.cpp  main.cpp
src/common/: CMakeLists.txt  common.c  common.h
src/sensors/: CMakeLists.txt  imu.c  imu.h
src/sensors/gy89/: bmp180.c  bmp180.h  l3gd20.c  l3gd20.h  lsm303d.c  lsm303d.h
tests/: SerialClass.h
tools/i2c_scanner/: i2c_scanner.ino
